ec2-standalone/security_group.tf
resource "aws_security_group" "tf-security-grp" {
  vpc_id = "${module.my-vpc.vpc_id}"
  name = "tf-security-grp"
  description = "secutiry group"
  egress {
    from_port = 0
    protocol = "-1"
    to_port = 0
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    protocol = "tcp"
    to_port = 80
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 22
    protocol = "tcp"
    to_port = 22
    cidr_blocks = ["0.0.0.0/0"]
  }
}
